@@ -962,6 +962,7 @@
     "not-in-match": "You are not participating in this Poker match!",
     "player": {
       "your-hand": "Your hand",
+      "chips": "You have **{{chips}}** :coin: chips",
       "not-in-round": "You are no longer participating in this round!",
       "cant-control-off-game": "You cannot remove players outside of a round!",
       "remove-players-zero": "No player was marked for removal from the match at the end of the round. Everyone keep playing!",
