@@ -967,6 +967,7 @@
     "not-in-match": "Você não está participando desta partida de Poker!",
     "player": {
       "your-hand": "Sua mão",
+      "chips": "Tu tens **{{chips}}** :coin: fichas",
       "not-in-round": "Você não está mais participando dessa rodada!",
       "cant-control-off-game": "Você não pode remover jogadores fora de um round!",
       "remove-players-zero": "Nenhum jogador foi marcado para ser removido na da partida ao fim da rodada. Todos continuam jogando!",
